Bugfix: The button toolbar should not be visible when adding/editing a container/network in Template Details view.
Reviewed-on: http://bellevue-ci.eng.vmware.com:8080/3981
Bellevue-Verified: jenkins <jenkins@vmware.com>
CS-Verified: jenkins <jenkins@vmware.com>

--- a/ui/app/src/styles/components/_list-views.scss
+++ b/ui/app/src/styles/components/_list-views.scss
@@ -1195,9 +1195,13 @@ $elements-side-margin: $elements-margin / 2;
   margin-top: 31px;
 }
 
-.template-details .edit-container-definition-view, .template-details .edit-existing-container-definition-view {
+.template-details .edit-container-definition-view,
+.template-details .edit-existing-container-definition-view,
+.template-details .new-container-definition-view,
+.template-details .edit-network {
   margin-right: $template-details-right;
   overflow: auto;
+  z-index: 102;
 }
 
 .template-details .edit-network.closable-view .control-btns {
